# spl_token

./: Anchor.toml  README.md  my-keypair.json
cli/src/: bench.rs  config.rs  main.rs  output.rs  rpc_client_utils.rs  sort.rs
client/: Cargo.toml
client/src/: client.rs  token.rs
client/tests/: program-test.rs
js/: package.json
js/lib/cjs/: index.js  index.js.map
js/lib/cjs/actions/: index.js  index.js.map
js/lib/cjs/extensions/: index.js  index.js.map
js/lib/cjs/instructions/: index.js  index.js.map
js/lib/cjs/state/: account.js  account.js.map  index.js  index.js.map
js/lib/esm/state/: account.js.map  account.mjs
js/lib/types/state/: account.d.ts
js/src/instructions/: approve.ts
js/test/: .import.swp
programs/icury_token/: Cargo.toml  program-id.md
