[package]
name = "icury_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "Apache-2.0"
exclude = ["js/**"]

[lib]
crate-type = ["cdylib", "lib"]
name = "icury_token"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
anchor-lang = "0.22.1"
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.9.9"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "0.5.1"
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"
spl-token = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]